--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=gerenciamento-biblioteca
+
+server.port=8090
+server.error.include-message=always
+
+spring.datasource.url=jdbc:postgresql://localhost:1432/biblioteca
+spring.datasource.username=postgres
+spring.datasource.password=010393
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
